--- a/templates/index.html
+++ b/templates/index.html
@@ -98,6 +98,38 @@
 		</div>
 	</div>
 	</br>
+	
+	
+		<table class="table table-bordered table-striped">
+			<thead>
+				<tr><th>Feature name</th><th>Description</th></tr>
+			</thead>
+			<tbody>
+					<tr><td>WEEK</td> <td></td></tr>
+					<tr><td>SECTOR</td> <td>sector-id</td></tr>
+					<tr><td>HHI</td> <td>Click数的HHI</td></tr>
+					<tr><td>CCI</td> <td>Click数的CCI</td></tr>
+					<tr><td>ENTROPY</td> <td>Click数的ENTROPY</td></tr>
+					<tr><td>HHI_COST</td> <td>Cost的HHI</td></tr>
+					<tr><td>CCI_COST</td> <td>Cost的CCI</td></tr>
+					<tr><td>ENTROPY_COST</td> <td>Cost的ENTROPY</td></tr>
+					<tr><td>EVALUE_ADJ</td> <td>邻接矩阵的最大特征值</td></tr>
+					<tr><td>EVALUE_WEI</td> <td>带权重（相同次数）的邻接矩阵的最大特征值</td></tr>
+					<tr><td>NCLICKS</td> <td>点击数</td></tr>
+					<tr><td>NUSERS</td> <td>有show的广告主数</td></tr>
+					<tr><td>REVENUE</td> <td>总收入</td></tr>
+					<tr><td>CPC</td> <td>CPC</td></tr>
+					<tr><td>T_EFF_D</td> <td>user-word图的有效直径</td></tr>
+					<tr><td>U_EFF_D</td> <td>user-user图的有效直径</td></tr>
+					<tr><td>U_CC</td> <td>user-user图的聚度系数</td></tr>
+					<tr><td>T_DIAM</td> <td>user-word图的直径</td></tr>
+					<tr><td>U_DIAM</td> <td>user-user图的直径</td></tr>
+
+
+
+			</tbody>
+		</table>
+				
 </div>
 <a href="#0" class="cd-top">Top</a>
 {% endblock %}
