--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,7 @@
 					<tr><td>CCI_COST</td> <td>Cost的CCI</td></tr>
 					<tr><td>ENTROPY_COST</td> <td>Cost的ENTROPY</td></tr>
 					<tr><td>EVALUE_ADJ</td> <td>邻接矩阵的最大特征值</td></tr>
-					<tr><td>EVALUE_WEI</td> <td>带权重（相同次数）的邻接矩阵的最大特征值</td></tr>
+					<tr><td>EVALUE_WEI</td> <td>带权重（相同词数）的邻接矩阵的最大特征值</td></tr>
 					<tr><td>NCLICKS</td> <td>点击数</td></tr>
 					<tr><td>NUSERS</td> <td>有show的广告主数</td></tr>
 					<tr><td>REVENUE</td> <td>总收入</td></tr>
