--- a/templates/base.html
+++ b/templates/base.html
@@ -11,18 +11,23 @@
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
+	
         <div class="navbar-header">
+			<!--
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+			-->
             <a class="navbar-brand" href="/">Baidu Compitition Network</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
+				<li><a href="/all">All sectors</a></li>
+				<li><a href="/one">Explore one sector</a></li>
             </ul>
         </div>
     </div>
