--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
 				<li><a href="/all">All sectors</a></li>
-				<li><a href="/one">Explore one sector</a></li>
+				<li><a href="/one">One sector</a></li>
             </ul>
         </div>
     </div>
