--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 {% block scripts %}
 {{super()}}
 <!--<script src="static/lib/echart/echarts.js"></script>-->
-<script src="static/lib/echart/echarts-all.js"></script>
-<script src="/static/lib/back-to-top/main.js"></script>
+<script src="static/lib/echart/echarts.min.js"></script>
+<!--script src="/static/lib/back-to-top/main.js"></script>-->
 {% endblock scripts%}
 
 {% block styles %}
