--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}百度竞价网络{% endblock %}
+{% block title %}指标可视化{% endblock %}
 
 {% block head %}
 {{ super() }}
@@ -21,7 +21,7 @@
                 <span class="icon-bar"></span>
             </button>
 			-->
-            <a class="navbar-brand" href="/">Baidu Compitition Network</a>
+            <a class="navbar-brand" href="/">指标可视化</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
