--- a/templates/index.html
+++ b/templates/index.html
@@ -12,4 +12,4 @@
 <link href="/static/lib/back-to-top/style.css" rel="stylesheet">
 {% endblock styles%}
 
-{% block title %}MLDM-Baidu{% endblock %}
+{% block title %}指标可视化{% endblock %}
