--- a/templates/explore_one_sector.html
+++ b/templates/explore_one_sector.html
@@ -3,7 +3,7 @@
 {% block scripts %}
 {{super()}}
 <script src="/static/js/one_sector.js"></script>
-// TODO 
+
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/t/bs-3.3.6/dt-1.10.11,fh-3.1.1/datatables.min.css"/>
 <script type="text/javascript" src="https://cdn.datatables.net/t/bs-3.3.6/dt-1.10.11,fh-3.1.1/datatables.min.js"></script>
 {% endblock scripts%}
@@ -119,29 +119,40 @@
 					<tr><th>Feature name</th><th>Description</th></tr>
 				</thead>
 				<tbody>
-					<tr><td>WEEK</td> <td></td></tr>
-					<tr><td>SECTOR</td> <td>sector-id</td></tr>
-					<tr><td>HHI</td> <td>Click数的HHI</td></tr>
-					<tr><td>CCI</td> <td>Click数的CCI</td></tr>
-					<tr><td>ENTROPY</td> <td>Click数的ENTROPY</td></tr>
-					<tr><td>HHI_COST</td> <td>Cost的HHI</td></tr>
-					<tr><td>CCI_COST</td> <td>Cost的CCI</td></tr>
-					<tr><td>ENTROPY_COST</td> <td>Cost的ENTROPY</td></tr>
-					<tr><td>EVALUE_ADJ</td> <td>邻接矩阵的最大特征值</td></tr>
-					<tr><td>EVALUE_WEI</td> <td>带权重（相同词数）的邻接矩阵的最大特征值</td></tr>
-					<tr><td>NCLICKS</td> <td>点击数</td></tr>
-					<tr><td>NUSERS</td> <td>有show的广告主数</td></tr>
-					<tr><td>REVENUE</td> <td>总收入</td></tr>
-					<tr><td>CPC</td> <td>CPC</td></tr>
-					<tr><td>T_EFF_D</td> <td>user-word图的有效直径</td></tr>
-					<tr><td>U_EFF_D</td> <td>user-user图的有效直径</td></tr>
-					<tr><td>U_CC</td> <td>user-user图的聚度系数</td></tr>
-					<tr><td>T_DIAM</td> <td>user-word图的直径</td></tr>
-					<tr><td>U_DIAM</td> <td>user-user图的直径</td></tr>
+					{% for feature in feature_desc %}
+					<<tr><td>{{feature[0]}}</td> <td>{{feature[1]}}</td></tr>
+					{% endfor %}
+					
 				</tbody>
 			</table>
+            <p>
+            <h3>说明</h3>
+            <h4>##网络相关指标说明：</h4>
+            <ul>
+                <li><dl>
+                    <dt>交易网络T</dt>
+                    <dd>是一个二部图，节点是用户和词，用户 u 和单词w之间有边表示u竞价了w。</dd>
+                <dl></li>
+                <li><dl>
+                    <dt>用户竞争网络U</dt>
+                    <dd>节点是用户，节点 i 和 j 之间有边表示 i 和 j 竞价了相同的单词。</dd>
+                    <dd>按照边有无权重U图有两种：
+                        <ul>
+                            <li>U_adj: 所有边的权重都是1 </li>
+                            <li>U_wei: 权重代表两个用户竞价的相同单词数</li>
+                        </ul>
+                    </dd>
+                </dl></li>
+            </ul>
+            <h4>##行业竞争相关指标说明：</h4>
+            <ul>
+                <li>_C意味着这个指标是使用cost作为计算数据</li>
+                <li>不加_C使用click作为计算数据</li>
+
+            </ul>
+            </p>
 		</div>
 	</div>		
 </div>
-<a href="#0" class="cd-top">Top</a>
+
 {% endblock %}
