filtering representative users

--- a/templates/explore_all_sector.html
+++ b/templates/explore_all_sector.html
@@ -8,7 +8,7 @@
 
 {% block page_content %}
 <div class="page-header">
-	<h1>Measures correlation of all sectors in one figure.</h1>
+	<h1 id="usertype">{{usertype}}</h1>
 </div>
 
 <div class="container-fluid">
