--- a/templates/explore_one_sector.html
+++ b/templates/explore_one_sector.html
@@ -10,7 +10,7 @@
 
 {% block page_content %}
 <div class="page-header">
-	<h1>Measures correlation in each sector.</h1>
+	<h1 id="usertype">{{usertype}}</h1>
 </div>
 
 <div class="container-fluid">
