--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block scripts %}
 {{super()}}
 <!--<script src="static/lib/echart/echarts.js"></script>-->
-<script src="/static/lib/echart/echarts.js"></script>
+<script src="/static/lib/echart/echarts.min.js"></script>
 <!--script src="/static/lib/back-to-top/main.js"></script>-->
 {% endblock scripts%}
 
