--- a/templates/index.html
+++ b/templates/index.html
@@ -32,10 +32,43 @@
     </table>
     
 </div>
+
+<div class="container" style="width: 500px;">
+    <table class="table table-bordered ">
+        <thead><tr>
+            <th>数据分类</th>
+            <th>One sector</th>
+            <th>All sectors</th>
+        </tr></thead>
+        <tbody>
+            <tr>
+                <td>PC端</td>
+                <td><a href="/one/pc">One sector</a></td>
+                <td><a href="/all/pc">All sectors</a></td>
+            </tr>
+            <tr>
+                <td>手机端</td>
+                <td><a href="/one/mobile">One sector</a></td>
+                <td><a href="/all/mobile">All sectors</a></td>
+            </tr>
+        </tbody>
+    </table>
+    
+</div>
 <hr>
 <div class="container" style="width: 800px;">
     
     <h2> Change log </h2>
+    <h3> 2016-08-08 </h3>
+    <p>
+        <ul>
+            <li> 将手机端和PC端分开 </li>
+            <li> 在All sectors界面增加了线性回归的斜率的展示 </li>
+            <li> 在One sector的图中画出了线性回归的结果 </li>
+        </ul>
+    </p>
+    <hr>
+
     <h3> 2016-07-01 </h3>
     <p> 
         <ul>
